--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "''",
   "scripts": {
     "build": "webpack --config webpack.production.config.js --progress --profile --colors",
-    "start": "webpack-dev-server --progress --profile --colors",
+	"dev": "webpack-dev-server --progress --profile --colors",
+    "start": "node index.js",
     "lint": "eslint --ext js --ext jsx src || exit 0",
     "dev": " webpack-dashboard -- webpack-dev-server --progress --profile --colors",
     "deploy": "webpack -p --config webpack.production.config.js"
@@ -20,6 +21,8 @@
   "dependencies": {
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
+	"express": "^4.14.1",
+	"compression": "^1.6.2",
     "google-cloud": "^0.46.2",
     "react": "15.4.2",
     "react-dom": "15.4.2",
