--- a/package.json
+++ b/package.json
@@ -4,24 +4,23 @@
   "description": "React Webpack Babel Starter Kit",
   "main": "''",
   "engines": {
-    "node": "7.5.0",
-	"npm": "4.3.0"
+    "node": "7.6.0",
+	"npm": "4.4.0"
   },
   "scripts": {
     "build": "webpack --config webpack.production.config.js --progress --profile --colors",
 	"dev": "webpack-dev-server --progress --profile --colors",
     "start": "node index.js",
     "lint": "eslint --ext js --ext jsx src || exit 0",
-    "dev": " webpack-dashboard -- webpack-dev-server --progress --profile --colors",
     "deploy": "webpack -p --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alicoding/react-webpack-babel"
+    "url": "https://github.com/cookiespam/mywebsite"
   },
-  "author": "Ali Al Dallal",
+  "author": "Liang Jia Sheng",
   "license": "MIT",
-  "homepage": "https://github.com/alicoding/react-webpack-babel#readme",
+  "homepage": "https://github.com/cookiespam/mywebsite#readme",
   "dependencies": {
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
