--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-  "name": "react-webpack-babel",
-  "version": "0.0.3",
-  "description": "React Webpack Babel Starter Kit",
-  "main": "''",
-  "engines": {
-    "node": "7.6.0",
-	"npm": "4.4.0"
-  },
-  "scripts": {
-    "build": "webpack --config webpack.production.config.js --progress --profile --colors",
-	"dev": "webpack-dev-server --progress --profile --colors",
-    "start": "node index.js",
-    "lint": "eslint --ext js --ext jsx src || exit 0",
-    "deploy": "webpack -p --config webpack.production.config.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cookiespam/mywebsite"
-  },
-  "author": "Liang Jia Sheng",
-  "license": "MIT",
-  "homepage": "https://github.com/cookiespam/mywebsite#readme",
-  "dependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
-	"express": "^4.14.1",
-	"compression": "^1.6.2",
-    "google-cloud": "^0.46.2",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-google-maps": "^6.0.1",
-    "semantic-ui-css": "^2.2.4",
-    "semantic-ui-react": "^0.64.8",
-    "xml2js": "^0.4.17"
-  },
-  "devDependencies": {
-    "babel-core": "6.22.1",
-    "babel-loader": "6.2.10",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.22.0",
-    "babel-runtime": "^6.22.0",
-    "css-loader": "0.26.1",
-    "file-loader": "0.10.0",
-    "html-webpack-plugin": "^2.28.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "2.2.1",
-    "webpack-cleanup-plugin": "^0.4.2",
-    "webpack-dashboard": "^0.3.0",
-    "webpack-dev-server": "2.3.0"
-  }
+    "name": "react-webpack-babel",
+    "version": "0.0.3",
+    "description": "React Webpack Babel Starter Kit",
+    "main": "''",
+    "engines": {
+        "node": "7.6.0",
+        "npm": "4.4.0"
+    },
+    "scripts": {
+        "build": "webpack --config webpack.production.config.js --progress --profile --colors",
+        "dev": "webpack-dev-server --progress --profile --colors",
+        "start": "node index.js",
+        "lint": "eslint --ext js --ext jsx src || exit 0",
+        "deploy": "webpack -p --config webpack.production.config.js",
+        "heroku-postbuild": "webpack --config webpack.production.config.js --progress --profile --colors"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/cookiespam/mywebsite"
+    },
+    "author": "Liang Jia Sheng",
+    "license": "MIT",
+    "homepage": "https://github.com/cookiespam/mywebsite#readme",
+    "dependencies": {
+        "babel-preset-es2015": "^6.22.0",
+        "babel-preset-latest": "^6.22.0",
+        "express": "^4.14.1",
+        "compression": "^1.6.2",
+        "google-cloud": "^0.46.2",
+        "react": "15.4.2",
+        "react-dom": "15.4.2",
+        "react-google-maps": "^6.0.1",
+        "semantic-ui-css": "^2.2.4",
+        "semantic-ui-react": "^0.64.8",
+        "xml2js": "^0.4.17"
+    },
+    "devDependencies": {
+        "babel-core": "6.22.1",
+        "babel-loader": "6.2.10",
+        "babel-plugin-transform-class-properties": "^6.22.0",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "babel-plugin-transform-runtime": "^6.22.0",
+        "babel-preset-es2015": "6.22.0",
+        "babel-preset-react": "6.22.0",
+        "babel-runtime": "^6.22.0",
+        "css-loader": "0.26.1",
+        "file-loader": "0.10.0",
+        "html-webpack-plugin": "^2.28.0",
+        "react-hot-loader": "^3.0.0-beta.6",
+        "style-loader": "0.13.1",
+        "url-loader": "0.5.7",
+        "webpack": "2.2.1",
+        "webpack-cleanup-plugin": "^0.4.2",
+        "webpack-dashboard": "^0.3.0",
+        "webpack-dev-server": "2.3.0"
+    }
 }
