--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
         "dev": "webpack-dev-server --progress --profile --colors",
         "start": "node index.js",
         "lint": "eslint --ext js --ext jsx src || exit 0",
-        "deploy": "webpack -p --config webpack.production.config.js",
-        "heroku-postbuild": "webpack --config webpack.production.config.js --progress --profile --colors"
+        "heroku-postbuild": "webpack -p --config webpack.production.config.js"
     },
     "repository": {
         "type": "git",
@@ -23,17 +22,15 @@
     "license": "MIT",
     "homepage": "https://github.com/cookiespam/mywebsite#readme",
     "dependencies": {
-        "babel-preset-es2015": "^6.22.0",
-        "babel-preset-latest": "^6.22.0",
         "express": "^4.14.1",
         "compression": "^1.6.2",
-        "google-cloud": "^0.46.2",
         "react": "15.4.2",
         "react-dom": "15.4.2",
         "react-google-maps": "^6.0.1",
         "semantic-ui-css": "^2.2.4",
         "semantic-ui-react": "^0.64.8",
-        "xml2js": "^0.4.17"
+        "xml2js": "^0.4.17",
+        "webpack": "2.2.1"
     },
     "devDependencies": {
         "babel-core": "6.22.1",
@@ -41,7 +38,7 @@
         "babel-plugin-transform-class-properties": "^6.22.0",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-runtime": "^6.22.0",
-        "babel-preset-es2015": "6.22.0",
+        "babel-preset-env": "^1.2.0",
         "babel-preset-react": "6.22.0",
         "babel-runtime": "^6.22.0",
         "css-loader": "0.26.1",
